2005-09-11  Tom Tromey  <tromey@redhat.com>

	* model/forenhanced.hh (model_for_enhanced::elt_type): New field.
	(model_for_enhanced): Initialize it.
	(model_for_enhanced::get_element_type): New method.
	* bytecode/generate.hh
	(bytecode_generator::emit_cast_maybe_boxing): Declare.
	* bytecode/generate.cc (emit_cast_maybe_boxing): New method.
	(visit_cast): Use it.
	(visit_for_enhanced): Likewise.
	* model/forenhanced.cc (resolve): Removed error for primitive
	type; do assignment conversion in both cases.
	(find_method): New function.

2005-09-11  Tom Tromey  <tromey@redhat.com>

	* model/class.hh (class model_class): Added some documentation.

2005-09-11  Ranjit Mathew  <rmathew@gcc.gnu.org>

	* util.hh (copy_str): New function similar to strdup().
	* format/format.hh (~format_repr): delete memory pointed to by PLAN.
	* format/format.cc (format_repr::format_repr): Use a duplicate string
	for PLAN, not the original string.

2005-07-14  Tom Tromey  <tromey@redhat.com>

	* model/class.cc (apply_type_map): Moved body ...
	(create_instance): ... here.

2005-07-11  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.cc (find_field): Examine erasure of field's
	type.
	(find_method): Examine erasures of method's types.

2005-07-11  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.cc (visit_cast): Fixed ordering of emit_cast
	arguments.

2005-07-11  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.cc (visit_cast): Handle Character specially.

2005-07-11  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.cc (find_method): Don't crash if argtype is
	NULL and method is not found.

2005-07-11  Tom Tromey  <tromey@redhat.com>

	* model/throwsclause.cc (get_signature): Return empty string if
	no parameterized types seen.
	* bytecode/classreader.cc (parse_signature): Handle case where
	exceptions are elided.  Clear current_method_arguments before
	parsing method signature.
	(parse_self): Require ACC_SUPER for enums.